[project]
name = "worker"
version = "0.1.0"
description = "The codecov worker"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asgiref>=3.8.1",
    "celery>=5.4.0",
    "click>=8.1.7",
    "codecov-ribs>=0.1.18",
    "django-postgres-extra>=2.0.8",
    "django<5",
    "google-cloud-pubsub>=2.27.1",
    "httpx>=0.27.2",
    "jinja2>=3.1.4",
    "lxml>=5.3.0",
    "openai>=1.54.4",
    "orjson>=3.10.11",
    "polars>=1.13.1",
    "psycopg2-binary>=2.9.10",
    "python-json-logger>=2.0.7",
    "pyyaml>=6.0.2",
    "redis>=5.2.0",
    "regex>=2024.11.6",
    "requests>=2.32.3",
    "sentry-sdk>=2.18.0",
    "shared",
    "sqlalchemy<2",
    "statsd>=4.0.1",
    "stripe>=9.6.0",
    "test-results-parser",
    "timestring",
    "zstandard>=0.23.0",
]

[tool.setuptools]
py-modules = []

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.uv]
dev-dependencies = [
    "factory-boy>=3.3.1",
    "freezegun>=1.5.1",
    "mock>=5.1.0",
    "pre-commit>=4.0.1",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-celery>=1.1.3",
    "pytest-cov>=6.0.0",
    "pytest-django>=4.9.0",
    "pytest-freezegun>=0.4.2",
    "pytest-mock>=3.14.0",
    "pytest-sqlalchemy>=0.2.1",
    "respx>=0.21.1",
    "sqlalchemy-utils>=0.41.2",
    "time-machine>=2.16.0",
    "vcrpy>=6.0.2",
]

[tool.uv.sources]
timestring = { git = "https://github.com/codecov/timestring", rev = "d37ceacc5954dff3b5bd2f887936a98a668dda42" }
test-results-parser = { git = "https://github.com/codecov/test-results-parser", rev = "94ff26cb083a02ff726dd2497c2129e4aaf5f7cd" }
shared = { git = "https://github.com/codecov/shared", rev = "9c31870de026a8a3f026f0753b1991e8c832fadb" }
